--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,4 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: message display
       run: echo "Work flow started"
+    - name: github context
+      run: echo "${{toJSON(github)}}"
 
