--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -15,3 +15,11 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+        
+      - name: Run data extractor
+        env:
+            JSON_FILE_PATH: ${{./.github/Json_files/Test_Sets.json}}
+        run: |
+          cd /Python_Scripts
+          python Extract_Data_From_Json.py --${{ JSON_FILE_PATH }}
+         
