--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -13,7 +13,7 @@ jobs:
         
       - name: Run data extractor
         env:
-            JSON_FILE_PATH: ${{MedhatMasry/TrialRepo/Json_files/Test_Sets.json}}
+            JSON_FILE_PATH: ${{MedhatMasry/TrialRepo/.github/Json_files/Test_Sets.json}}
         run: |
           cd /Python_Scripts
           python Extract_Data_From_Json.py --${{ JSON_FILE_PATH }}
