--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -13,5 +13,5 @@ jobs:
         
       - name: Run data extractor 
         run: |
-          python Python_Scripts/Extract_Data_From_Json.py --Json_files/Test_Sets.json
+          python Python_Scripts/Extract_Data_From_Json.py Json_files/Test_Sets.json
          
