--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -19,6 +19,6 @@ jobs:
       - name: use output
         id: use_output
         run: |
-          echo "${{ .github.steps.outputs.Run_data_extractor }}"
+          echo "${{ github.steps.Run_data_extractor.outputs }}"
           
          
