--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -22,7 +22,7 @@ jobs:
           echo "value2=key2" >> "$GITHUB_OUTPUT"
       - name: Read output from script
         run: |
-          echo "VAL1: ${{ steps.write_output_from_script.outputs.value1 }}"
-          echo "VAL2: ${{ steps.write_output_from_script.outputs.value2 }}"
+          echo "VAL1: ${{ steps.Run_data_extractor.outputs.value1 }}"
+          echo "VAL2: ${{ steps.Run_data_extractor.outputs.value2 }}"
           
          
