--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -13,13 +13,18 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-        
+
+     - name: Write output
+        id: write_output
+        run: |          
+          echo "value1=key1" >> "$GITHUB_OUTPUT"
+          echo "value2=key2" >> "$GITHUB_OUTPUT"
+          
       - name: Run data extractor
         id: Run_data_extractor
         run: |
           python Python_Scripts/Extract_Data_From_Json.py Json_files/Test_Sets.json
-          echo "value1=key1" >> "$GITHUB_OUTPUT"
-          echo "value2=key2" >> "$GITHUB_OUTPUT"
+          
       - name: Read output from script
         run: |
           echo "VAL1: ${{ steps.Run_data_extractor.outputs.value1 }}"
