--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           echo "campaign_name: ${{ steps.Run_data_extractor.outputs.campaign_name }}"
           echo "id_list: ${{ steps.Run_data_extractor.outputs.id_list }}"
-          echo "id_list: ${{ steps.Run_data_extractor.outputs.test_set_id }}"
+          echo "test_set_id0: ${{ steps.Run_data_extractor.outputs.test_set_id[0] }}"
+          echo "test_set_id1: ${{ steps.Run_data_extractor.outputs.test_set_id[1] }}"
           
          
