--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           python Python_Scripts/Extract_Data_From_Json.py Json_files/Test_Sets.json
           env:
-           CAMPAIGN_NAME = ${{ steps.Run_data_extractor.outputs.campaign_name }}"
-           ID_LIST = ${{ steps.Run_data_extractor.outputs.id_list }}"
-           TEST_SET_ID = ${{ steps.Run_data_extractor.outputs.test_set_id }}"
+           CAMPAIGN_NAME = ${{ steps.Run_data_extractor.outputs.campaign_name }}
+           ID_LIST = ${{ steps.Run_data_extractor.outputs.id_list }}
+           TEST_SET_ID = ${{ steps.Run_data_extractor.outputs.test_set_id }}
           
       - name: Read output from script
         run: |
