--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -11,7 +11,10 @@ on:
 
 jobs:
   trigger-trace-analyzer-workflow:
-    runs-on: ubuntu-latest
+    strategy: 
+      matrix:
+        operating-systems: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.operating-systems}}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
