remove matrix and run it on windows only

--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -15,7 +15,7 @@ jobs:
     strategy: 
       matrix:
         operating-systems: [windows-latest, windows-latest]
-    runs-on: ${{ matrix.operating-systems}}
+    runs-on: windows-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
