--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -30,6 +30,16 @@ jobs:
           echo "campaign_name:${{ steps.Run_data_extractor.outputs.campaign_name }}"
           echo "id_list:${{ steps.Run_data_extractor.outputs.id_list }}"
           echo "test_set_id:${{ steps.Run_data_extractor.outputs.test_set_id }}"
+
+      - name: Determine file name using its extention
+        id: file_name_get
+        run: |
+          echo "artifact_path=$(ls results\test_results | grep nunit.xml)" >> "$GITHUB_OUTPUT"
+
+      - name: Determine file name using its extention
+        run: |
+          echo "artifact_path=${{ steps.file_name_get.outputs.artifact_path}}"
+         
   
   Dummy_job:
    uses: ./.github/workflows/reusable_workflow.yml
