--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -35,6 +35,7 @@ jobs:
         id: file_name_get
         run: |
           echo "artifact_path=$(dir results/test_results/*.xml)" >> "$GITHUB_OUTPUT"
+          curl -i "https://api.github.com/repos/vnation/NewsAggregator/contents/.xml"
 
       - name: Determine file name using its extention
         run: |
