add step to display result test file

--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -35,6 +35,8 @@ jobs:
         id: file_name_get
         run: |
           echo "artifact_path=$(dir results/test_results/*.xml)" >> "$GITHUB_OUTPUT"
+        env:
+          TEMP_VAR: $(dir results/test_results/*.xml)
           
 
       - name: Determine file name using its extention
