Change some lines to clean the code

--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -46,6 +46,7 @@ jobs:
          
   
   Dummy_job:
+   needs: Run-Data-Extractor
    uses: ./.github/workflows/reusable_workflow.yml
 
            
