--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -42,6 +42,8 @@ jobs:
           echo "artifact_path=${{ steps.file_path_get.outputs.artifact_path}}"
           echo "artifact_path2=${{ steps.file_path_get.outputs.PATH}}"
           echo "artifact_path3= ${{ steps.file_path_get.outputs.PATH}}"
+          echo "artifact_path5= ${{ steps.file_path_get.outputs.PATH}}"
+          
           
          
   
