--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -1,4 +1,3 @@
-name: run data extractor
 
 on:
   workflow_dispatch:
@@ -48,6 +47,76 @@ jobs:
   Dummy_job:
    needs: Run-Data-Extractor
    uses: ./.github/workflows/reusable_workflow.yml
+
+  use_artifact_from_another_workflow:
+    steps:
+    - name: clone repo
+      uses: actions/checkout@v3
+
+    - name: download artifact
+      uses: actions/download-artifact
+    name: dummy-artifactname: run data extractor
+
+on:
+  workflow_dispatch:
+   inputs:
+    test_set_path:
+        description: 'The path to a test set file'
+        required: false
+        type: string
+
+
+jobs:
+  Run-Data-Extractor:
+    continue-on-error: true
+    strategy: 
+      matrix:
+        operating-systems: [windows-latest, ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.operating-systems }}
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+                  
+      - name: Run data extractor
+        id: Run_data_extractor
+        run: |
+          python Python_Scripts/Extract_Data_From_Json.py --test_set_path=${{ inputs.test_set_path }}
+          
+      - name: Read output from script
+        run: |
+          echo "campaign_name:${{ steps.Run_data_extractor.outputs.campaign_name }}"
+          echo "id_list:${{ steps.Run_data_extractor.outputs.id_list }}"
+          echo "test_set_id:${{ steps.Run_data_extractor.outputs.test_set_id }}"
+
+      - name: Determine file path using its extention
+        id: file_path_get
+        run: |
+          echo "artifact_path=$(dir results/test_results/*.xml)" >> "$GITHUB_OUTPUT"
+          echo "PATH=$(ls results/test_results | grep nunit.xml)" >> "$GITHUB_OUTPUT"
+          
+      - name: Display file path
+        run: |
+          echo "artifact_path=${{ steps.file_path_get.outputs.artifact_path}}"
+          echo "artifact_path2=${{ steps.file_path_get.outputs.PATH}}"
+          echo "artifact_path3= ${{ steps.file_path_get.outputs.PATH}}"
+          echo "artifact_path4=${{ steps.file_path_get.outputs.PATH}}"
+          echo "artifact_path5= ${{ steps.file_path_get.outputs.PATH}}"
+                
+  Dummy_job:
+   needs: Run-Data-Extractor
+   uses: ./.github/workflows/reusable_workflow.yml
+
+  use_artifact_from_another_workflow:
+    steps:
+    - name: clone repo
+      uses: actions/checkout@v3
+
+    - name: download artifact
+      uses: actions/download-artifact
+      with:
+        name: dummy-artifact
+    
+
 
            
           
