--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -55,6 +55,6 @@ jobs:
      uses: actions/checkout@v3
 
    - name: download artifact
-     uses: actions/download-artifact
+     uses: actions/download-artifact@v3
      with:
        name: dummy-artifactname
