--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -58,4 +58,4 @@ jobs:
    - name: download artifact
      uses: actions/download-artifact@v3
      with:
-       name: dummy-artifactname
+       name: dummy-artifact
