--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -62,6 +62,8 @@ jobs:
   Dummy_job:
    needs: Run-Data-Extractor
    uses: ./.github/workflows/reusable_workflow.yml
+   with:
+    file_name: ${{ needs.Run-Data-Extractor.outputs.file_name }} 
 
   use_artifact_from_another_workflow:
    runs-on: windows-latest
