--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -7,6 +7,10 @@ on:
         description: 'The path to a test set file'
         required: false
         type: string
+    Set_file_name:
+      description: 'Set file name'
+      required: true
+      type: boolean
 
 jobs:
   Run-Data-Extractor:
@@ -22,6 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set file name
+        if: ${{ inputs.Set_file_name }}
         run: echo "FILE_NAME=Meta_$(date +'%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
                   
       - name: Run data extractor
@@ -76,5 +81,6 @@ jobs:
      uses: actions/download-artifact@v3
      with:
        name: dummy-artifact
+
    - name: Display file name
      run: echo "file_name:${{ needs.Run-Data-Extractor.outputs.file_name }}"
