--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -27,7 +27,9 @@ jobs:
 
       - name: Set file name
         if: ${{ inputs.Set_file_name }}
-        run: echo "FILE_NAME=Meta_$(date +'%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
+        run: |
+          $current_datetime=Get-Date -Format 'yyyy-MM-dd_HH-mm-ss'
+          echo "FILE_NAME=Meta_$current_datetime_$(date +'%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
                   
       - name: Run data extractor
         id: Run_data_extractor
