--- a/.github/workflows/run_data_extractor.yml
+++ b/.github/workflows/run_data_extractor.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Set file name
         if: ${{ inputs.Set_file_name }}
         run: |
-          echo "$CURRENT_DATETIME=$(Get-Date -Format 'yyyy-MM-dd_HH-mm-ss')"  
+          echo $CURRENT_DATETIME="$(Get-Date -Format 'yyyy-MM-dd_HH-mm-ss')"
+          echo $ {{ CURRENT_DATETIME }}  
           echo "FILE_NAME=Meta_$(date +'%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
                   
       - name: Run data extractor
